// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubSettingsComponent analyticalTimeToLive hidden 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 20,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="timeToLive"
      label="Time to Live"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "off",
            "text": "Off",
          },
          Object {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          Object {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      id="timeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="1000"
    />
  </Stack>
  <StyledChoiceGroup
    id="geoSpatialConfig"
    label="Geospatial Configuration"
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "Geography",
          "text": "Geography",
        },
        Object {
          "key": "Geometry",
          "text": "Geometry",
        },
      ]
    }
    selectedKey="Geography"
    styles={
      Object {
        "flexContainer": Array [
          Object {
            "selectors": Object {
              ".ms-ChoiceField-field.is-checked::after": Object {
                "borderColor": "",
              },
              ".ms-ChoiceField-field.is-checked::before": Object {
                "borderColor": "",
              },
              ".ms-ChoiceField-wrapper label": Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <Stack>
    <StyledLabelBase
      id="settingsV2ChangeFeedLabelId"
    >
      <ToolTipLabelComponent
        label="Change feed log retention policy"
        toolTipElement={
          <Text
            styles={
              Object {
                "root": Object {
                  "color": "windowtext",
                  "fontSize": 14,
                },
              }
            }
          >
            Enable change feed log retention policy to retain last 10 minutes of history for items in the container by default. To support this, the request unit (RU) charge for this container will be multiplied by a factor of two for writes. Reads are unaffected.
          </Text>
        }
      />
    </StyledLabelBase>
    <StyledChoiceGroup
      aria-labelledby="settingsV2ChangeFeedLabelId"
      id="changeFeedPolicy"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "Off",
            "text": "Off",
          },
          Object {
            "key": "On",
            "text": "On",
          },
        ]
      }
      selectedKey="On"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/partitionKey"
      disabled={true}
      label="Partition key"
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
    <Text>
      Large 
      partition key
       has been enabled
    </Text>
  </Stack>
</Stack>
`;

exports[`SubSettingsComponent analyticalTimeToLiveSeconds hidden 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 20,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="timeToLive"
      label="Time to Live"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "off",
            "text": "Off",
          },
          Object {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          Object {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      id="timeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="1000"
    />
  </Stack>
  <StyledChoiceGroup
    id="geoSpatialConfig"
    label="Geospatial Configuration"
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "Geography",
          "text": "Geography",
        },
        Object {
          "key": "Geometry",
          "text": "Geometry",
        },
      ]
    }
    selectedKey="Geography"
    styles={
      Object {
        "flexContainer": Array [
          Object {
            "selectors": Object {
              ".ms-ChoiceField-field.is-checked::after": Object {
                "borderColor": "",
              },
              ".ms-ChoiceField-field.is-checked::before": Object {
                "borderColor": "",
              },
              ".ms-ChoiceField-wrapper label": Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="analyticalStorageTimeToLive"
      label="Analytical Storage Time to Live"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "off",
            "text": "Off",
          },
          Object {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          Object {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on-nodefault"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": undefined,
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": undefined,
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <Stack>
    <StyledLabelBase
      id="settingsV2ChangeFeedLabelId"
    >
      <ToolTipLabelComponent
        label="Change feed log retention policy"
        toolTipElement={
          <Text
            styles={
              Object {
                "root": Object {
                  "color": "windowtext",
                  "fontSize": 14,
                },
              }
            }
          >
            Enable change feed log retention policy to retain last 10 minutes of history for items in the container by default. To support this, the request unit (RU) charge for this container will be multiplied by a factor of two for writes. Reads are unaffected.
          </Text>
        }
      />
    </StyledLabelBase>
    <StyledChoiceGroup
      aria-labelledby="settingsV2ChangeFeedLabelId"
      id="changeFeedPolicy"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "Off",
            "text": "Off",
          },
          Object {
            "key": "On",
            "text": "On",
          },
        ]
      }
      selectedKey="On"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/partitionKey"
      disabled={true}
      label="Partition key"
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
    <Text>
      Large 
      partition key
       has been enabled
    </Text>
  </Stack>
</Stack>
`;

exports[`SubSettingsComponent changeFeedPolicy hidden 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 20,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="timeToLive"
      label="Time to Live"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "off",
            "text": "Off",
          },
          Object {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          Object {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      id="timeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="1000"
    />
  </Stack>
  <StyledChoiceGroup
    id="geoSpatialConfig"
    label="Geospatial Configuration"
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "Geography",
          "text": "Geography",
        },
        Object {
          "key": "Geometry",
          "text": "Geometry",
        },
      ]
    }
    selectedKey="Geography"
    styles={
      Object {
        "flexContainer": Array [
          Object {
            "selectors": Object {
              ".ms-ChoiceField-field.is-checked::after": Object {
                "borderColor": "",
              },
              ".ms-ChoiceField-field.is-checked::before": Object {
                "borderColor": "",
              },
              ".ms-ChoiceField-wrapper label": Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="analyticalStorageTimeToLive"
      label="Analytical Storage Time to Live"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "off",
            "text": "Off",
          },
          Object {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          Object {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      id="analyticalStorageTimeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="2000"
    />
  </Stack>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/partitionKey"
      disabled={true}
      label="Partition key"
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
    <Text>
      Large 
      partition key
       has been enabled
    </Text>
  </Stack>
</Stack>
`;

exports[`SubSettingsComponent renders 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 20,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="timeToLive"
      label="Time to Live"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "off",
            "text": "Off",
          },
          Object {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          Object {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      id="timeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="1000"
    />
  </Stack>
  <StyledChoiceGroup
    id="geoSpatialConfig"
    label="Geospatial Configuration"
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "Geography",
          "text": "Geography",
        },
        Object {
          "key": "Geometry",
          "text": "Geometry",
        },
      ]
    }
    selectedKey="Geography"
    styles={
      Object {
        "flexContainer": Array [
          Object {
            "selectors": Object {
              ".ms-ChoiceField-field.is-checked::after": Object {
                "borderColor": "",
              },
              ".ms-ChoiceField-field.is-checked::before": Object {
                "borderColor": "",
              },
              ".ms-ChoiceField-wrapper label": Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="analyticalStorageTimeToLive"
      label="Analytical Storage Time to Live"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "off",
            "text": "Off",
          },
          Object {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          Object {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      id="analyticalStorageTimeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="2000"
    />
  </Stack>
  <Stack>
    <StyledLabelBase
      id="settingsV2ChangeFeedLabelId"
    >
      <ToolTipLabelComponent
        label="Change feed log retention policy"
        toolTipElement={
          <Text
            styles={
              Object {
                "root": Object {
                  "color": "windowtext",
                  "fontSize": 14,
                },
              }
            }
          >
            Enable change feed log retention policy to retain last 10 minutes of history for items in the container by default. To support this, the request unit (RU) charge for this container will be multiplied by a factor of two for writes. Reads are unaffected.
          </Text>
        }
      />
    </StyledLabelBase>
    <StyledChoiceGroup
      aria-labelledby="settingsV2ChangeFeedLabelId"
      id="changeFeedPolicy"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "Off",
            "text": "Off",
          },
          Object {
            "key": "On",
            "text": "On",
          },
        ]
      }
      selectedKey="On"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/partitionKey"
      disabled={true}
      label="Partition key"
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
    <Text>
      Large 
      partition key
       has been enabled
    </Text>
  </Stack>
</Stack>
`;

exports[`SubSettingsComponent timeToLiveSeconds hidden 1`] = `
<Stack
  tokens={
    Object {
      "childrenGap": 20,
    }
  }
>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="timeToLive"
      label="Time to Live"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "off",
            "text": "Off",
          },
          Object {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          Object {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="off"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": undefined,
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": undefined,
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <StyledChoiceGroup
    id="geoSpatialConfig"
    label="Geospatial Configuration"
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "Geography",
          "text": "Geography",
        },
        Object {
          "key": "Geometry",
          "text": "Geometry",
        },
      ]
    }
    selectedKey="Geography"
    styles={
      Object {
        "flexContainer": Array [
          Object {
            "selectors": Object {
              ".ms-ChoiceField-field.is-checked::after": Object {
                "borderColor": "",
              },
              ".ms-ChoiceField-field.is-checked::before": Object {
                "borderColor": "",
              },
              ".ms-ChoiceField-wrapper label": Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledChoiceGroup
      id="analyticalStorageTimeToLive"
      label="Analytical Storage Time to Live"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "off",
            "text": "Off",
          },
          Object {
            "key": "on-nodefault",
            "text": "On (no default)",
          },
          Object {
            "key": "on",
            "text": "On",
          },
        ]
      }
      selectedKey="on"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
    <StyledTextFieldBase
      id="analyticalStorageTimeToLiveSeconds"
      max={2147483647}
      min={1}
      onChange={[Function]}
      required={true}
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
      suffix="second(s)"
      type="number"
      value="2000"
    />
  </Stack>
  <Stack>
    <StyledLabelBase
      id="settingsV2ChangeFeedLabelId"
    >
      <ToolTipLabelComponent
        label="Change feed log retention policy"
        toolTipElement={
          <Text
            styles={
              Object {
                "root": Object {
                  "color": "windowtext",
                  "fontSize": 14,
                },
              }
            }
          >
            Enable change feed log retention policy to retain last 10 minutes of history for items in the container by default. To support this, the request unit (RU) charge for this container will be multiplied by a factor of two for writes. Reads are unaffected.
          </Text>
        }
      />
    </StyledLabelBase>
    <StyledChoiceGroup
      aria-labelledby="settingsV2ChangeFeedLabelId"
      id="changeFeedPolicy"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "Off",
            "text": "Off",
          },
          Object {
            "key": "On",
            "text": "On",
          },
        ]
      }
      selectedKey="On"
      styles={
        Object {
          "flexContainer": Array [
            Object {
              "selectors": Object {
                ".ms-ChoiceField-field.is-checked::after": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-field.is-checked::before": Object {
                  "borderColor": "",
                },
                ".ms-ChoiceField-wrapper label": Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "padding": "2px 5px",
                  "whiteSpace": "nowrap",
                },
              },
            },
          ],
        }
      }
    />
  </Stack>
  <Stack
    tokens={
      Object {
        "childrenGap": 5,
      }
    }
  >
    <StyledTextFieldBase
      defaultValue="/partitionKey"
      disabled={true}
      label="Partition key"
      styles={
        Object {
          "fieldGroup": Object {
            "borderColor": "",
            "height": 25,
            "selectors": Object {
              ":disabled": Object {
                "backgroundColor": undefined,
                "borderColor": undefined,
              },
            },
            "width": 300,
          },
        }
      }
    />
    <Text>
      Large 
      partition key
       has been enabled
    </Text>
  </Stack>
</Stack>
`;
